fix: autocomplete view spacing

--- a/frontend/src/components/Question/_AutoComplete.scss
+++ b/frontend/src/components/Question/_AutoComplete.scss
@@ -20,5 +20,6 @@
 
   .control{
     color: $black;
+    margin-top: 10px;    
   }
 }
